[gd_scene load_steps=12 format=2]

[ext_resource path="res://space_actors/player/laser_gun/LaserGun.gd" type="Script" id=1]
[ext_resource path="res://space_actors/player/glowing_circle.png" type="Texture" id=2]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.577778, 0.851852, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 0.866667, 0.921569, 0.976471, 1, 0.49223, 0.692665, 0.893101, 0.148148, 0.403922, 0.639216, 0.87451, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.335443, 1 ), -0.0969546, -0.0969546, 0, 0, Vector2( 1, 0 ), -0.831579, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = 300.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.5
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=6]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = 300.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.5
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )

[sub_resource type="Curve" id=7]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.537975, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=8]
curve = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=9]
emission_shape = 2
emission_box_extents = Vector3( 60, 40, 1 )
flag_align_y = true
flag_disable_z = true
direction = Vector3( -1, 0, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 30.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
tangential_accel = 100.0
tangential_accel_random = 1.0
scale = 0.3
scale_curve = SubResource( 8 )

[node name="LaserGun" type="RayCast2D" groups=[
"Gun",
]]
position = Vector2( 200, 200 )
cast_to = Vector2( 1000, 0 )
script = ExtResource( 1 )
max_length = 1000.0

[node name="Line2D" type="Line2D" parent="."]
modulate = Color( 1.7, 1.7, 1.7, 1 )
points = PoolVector2Array( 0, 0, 100, 0 )
default_color = Color( 1, 0.776471, 0.25098, 1 )
texture_mode = 2
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
sharp_limit = 8.0
antialiased = true

[node name="Tween" type="Tween" parent="."]

[node name="CastingParticles2D" type="Particles2D" parent="."]
modulate = Color( 1.5, 1.5, 1.5, 1 )
emitting = false
amount = 4
lifetime = 0.4
explosiveness = 0.4
process_material = SubResource( 5 )
texture = ExtResource( 2 )

[node name="CollisionParticles2D" type="Particles2D" parent="."]
modulate = Color( 1.5, 1.5, 1.5, 1 )
emitting = false
amount = 12
lifetime = 0.4
explosiveness = 0.2
process_material = SubResource( 6 )
texture = ExtResource( 2 )

[node name="BeamParticles2D" type="Particles2D" parent="."]
modulate = Color( 1.5, 1.5, 1.5, 1 )
emitting = false
amount = 50
preprocess = 1.0
visibility_rect = Rect2( -1000, -1000, 2000, 2000 )
local_coords = false
draw_order = 1
process_material = SubResource( 9 )
texture = ExtResource( 2 )
